--- a/app/components/core/Button.css
+++ b/app/components/core/Button.css
@@ -20,4 +20,5 @@ button:hover {
 button:focus {
   box-shadow: 0px 0px 0px var(--background-shadow-color);
   transform: scale(1.0);
+  outline-style: none;
 }
