thoughts on roadmap

--- a/index.css
+++ b/index.css
@@ -33,3 +33,12 @@
   color: var(--warn-color);
   border-color: var(--warn-color);
 }
+
+/* baseline */
+
+body {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
